--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "allure": "allure generate --report-path test-report"
   },
   "repository": {
     "type": "git",
@@ -18,6 +19,19 @@
   },
   "homepage": "https://github.com/jsonpanganiban/webdriverio-tests#readme",
   "devDependencies": {
-    "@wdio/cli": "^6.1.7"
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.9.6",
+    "@babel/preset-env": "^7.9.6",
+    "@babel/register": "^7.9.0",
+    "@wdio/allure-reporter": "^6.1.5",
+    "@wdio/cli": "^6.1.7",
+    "@wdio/local-runner": "^6.1.7",
+    "@wdio/mocha-framework": "^6.1.6",
+    "@wdio/spec-reporter": "^6.1.5",
+    "@wdio/sync": "^6.1.7",
+    "chromedriver": "^81.0.0",
+    "wdio-allure-reporter": "^0.8.3",
+    "wdio-chromedriver-service": "^6.0.3",
+    "wdio-timeline-reporter": "^5.1.2"
   }
 }
