--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "npx wdio wdio.conf.js --parallel=false",
-    "allure": "allure generate --report-path test-report"
+    "test": "wdio --parallel=false && npm run allure",
+    "allure": "allure generate --clean test-report/allure-results && allure open"
   },
   "repository": {
     "type": "git",
@@ -27,6 +27,7 @@
     "@wdio/cli": "^6.1.7",
     "@wdio/local-runner": "^6.1.7",
     "@wdio/mocha-framework": "^6.1.6",
+    "@wdio/selenium-standalone-service": "^6.0.16",
     "@wdio/spec-reporter": "^6.1.5",
     "@wdio/sync": "^6.1.7",
     "chromedriver": "^81.0.0",
